; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/ppcmmu/extr_gdblib.c_PacketWriteChar.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/ppcmmu/extr_gdblib.c_PacketWriteChar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DataOutCsum = common dso_local global i32 0, align 4
@DataOutBuffer = common dso_local global i32* null, align 8
@DataOutAddr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PacketWriteChar(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @DataOutCsum, align 4
  %5 = add nsw i32 %4, %3
  store i32 %5, i32* @DataOutCsum, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i32*, i32** @DataOutBuffer, align 8
  %8 = load i32, i32* @DataOutAddr, align 4
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* @DataOutAddr, align 4
  %10 = sext i32 %8 to i64
  %11 = getelementptr inbounds i32, i32* %7, i64 %10
  store i32 %6, i32* %11, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
